[tool.poetry]
name = "ameblo-stats"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.1"
httpx = "^0.23.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
nbqa = "^1.4.0"
black = "^22.6.0"
ipywidgets = "^7.7.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
